--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ authors = ["JazzyCamel"]
 [tool.poetry.dependencies]
 python = "^3.8"
 PyQt5 = "^5.15.2"
+Pillow = "^8.1.0"
+ExifRead = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
+icecream = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
