--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 PyQt5 = "^5.15.2"
 Pillow = "^8.1.0"
 ExifRead = "^2.3.2"
+recordtype = "^1.3"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
