--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ PyQt5 = "^5.15.2"
 Pillow = "^8.1.0"
 ExifRead = "^2.3.2"
 recordtype = "^1.3"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
